# embeddings_pipeline

./: .gitignore  AGENT.md  README.md  README_DASHBOARD.md  dashboard_launcher.py  dashboard_requirements.txt  embeddings_pipeline_plan.md  production_config.yaml  pyproject.toml  requirements.txt  sample_metadata_structure.json  test_index.py
docs/: API.md  ARCHITECTURE.md  PERFORMANCE.md  step2_loader_enhancements.md
src/sciembed/: __init__.py  async_pipeline.py  cli.py  config.py  dashboard.py  pipeline.py  runner.py
src/sciembed/components/: __init__.py  deduplicator.py  embedder.py  index.py  loader.py  persister.py  preparer.py
tests/: test_deduplicator.py  test_embedder.py  test_integration.py  test_loader_enhanced.py  test_loader_performance.py  test_preparer.py
